fixed menu on mobile

--- a/packages/theme/css/core.css
+++ b/packages/theme/css/core.css
@@ -24,5 +24,5 @@
 }
 
 #top-menu{
-    height: 55px;
+    min-height: 55px;
 }
